@@ -2,7 +2,6 @@ package sn.ism.auchan.web.controllers.impl;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Page;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
 import org.springframework.http.HttpStatus;
@@ -11,40 +10,58 @@ import org.springframework.validation.BindingResult;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RestController;
 import sn.ism.auchan.data.entities.Client;
+import sn.ism.auchan.data.entities.Commande;
 import sn.ism.auchan.services.ClientService;
+//import sn.ism.auchan.services.CommandeService;
+import sn.ism.auchan.services.CommandeService;
 import sn.ism.auchan.web.controllers.ClientController;
 import sn.ism.auchan.web.dto.RestResponse;
 import sn.ism.auchan.web.dto.request.ClientCreateRequestWithCommandes;
 import sn.ism.auchan.web.dto.response.ClientSimpleResponse;
 import sn.ism.auchan.web.dto.response.ClientWithCommande;
-import sn.ism.auchan.web.dto.response.ClientWithPaginateCommandeResponse;
+import sn.ism.auchan.web.dto.response.CommandeSimpleResponse;
 
+import java.util.HashMap;
 import java.util.Map;
 
 @RestController
-//@RequiredArgsConstructor
+@RequiredArgsConstructor
 public class ClientControllerImpl implements ClientController {
 
     private final ClientService clientService;
+    private final CommandeService commandeService;
+//    private final CommandeService commandeService;
 
-    public ClientControllerImpl(ClientService clientService) {
-        this.clientService = clientService;
-    }
 
     @Override
-    public ResponseEntity<Page<ClientSimpleResponse>> getAll(int page, int size) {
+    public ResponseEntity<Map<String, Object>> getAll(int page, int size) {
         Pageable pageable = PageRequest.of(page, size);
         Page<Client> clients = clientService.getAllClients(pageable);
         Page<ClientSimpleResponse> simpleClientResponse = clients.map(ClientSimpleResponse::new);
-        return new ResponseEntity<>(simpleClientResponse, HttpStatus.OK);
+        return new ResponseEntity<>(
+                RestResponse.responsePaginate(
+                        HttpStatus.OK,
+                        simpleClientResponse.getContent(),
+                        simpleClientResponse.getNumber(),
+                        simpleClientResponse.getTotalPages(),
+                        simpleClientResponse.getTotalElements(),
+                        simpleClientResponse.isFirst(),
+                        simpleClientResponse.isLast(),
+                        "simpleClientResponse"
+                ),
+                HttpStatus.OK
+        );
     }
 
     @Override
-    public ResponseEntity<ClientSimpleResponse> getOne(Long id) {
+    public ResponseEntity<Map<String, Object>> getOne(Long id) {
         var client = clientService.getById(id);
         if(client == null)
             return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-        return new ResponseEntity<>(new ClientSimpleResponse(client), HttpStatus.OK);
+        return new ResponseEntity<>(RestResponse.response(HttpStatus.OK,
+                new ClientSimpleResponse(client),
+                "ClientSimpleResponse"),
+                HttpStatus.OK);
     }
 
     @Override
@@ -55,14 +72,14 @@ public class ClientControllerImpl implements ClientController {
     @Override
     public ResponseEntity<Map<String, Object>> createWithCommande(ClientCreateRequestWithCommandes client, BindingResult bindingResult) {
         System.out.println("createWithCommande");
-        System.out.println("client: " + client);
         if (bindingResult.hasErrors()) {
             return new ResponseEntity<>(RestResponse.responseError(bindingResult),HttpStatus.BAD_REQUEST);
         }else {
             var clientSaved = clientService.create(client.toEntity());
+            System.out.println(new ClientSimpleResponse(clientSaved));
             return new ResponseEntity<>(
                     RestResponse.response(HttpStatus.OK,
-                            RestResponse.response(HttpStatus.CREATED, clientSaved, "ClientCreateRequestWithCommandes"),
+                            new ClientSimpleResponse(clientSaved),
                             "ClientWithPaginateCommandeResponse"), HttpStatus.OK
             );
         }
@@ -85,7 +102,38 @@ public class ClientControllerImpl implements ClientController {
         var client = clientService.getById(id);
         if (client == null)
             return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-        System.out.println(client.getCommandes().get(0).getId());
+        System.out.println(client.getCommandes().getFirst().getId());
         return new ResponseEntity<>(new ClientWithCommande(client), HttpStatus.OK);
+    }
+
+    @Override
+    public ResponseEntity<Map<String, Object>> getClientWithCommandesV2(Long id,
+                                                                        int page,
+                                                                        int size) {
+        var client = clientService.getById(id);
+        if (client == null)
+            return new ResponseEntity<>(HttpStatus.NO_CONTENT);
+        Pageable pageable = PageRequest.of(page, size);
+        Page<Commande> commandes = commandeService.getCommandeByClient(id, pageable);
+        Page<CommandeSimpleResponse> commandeClientPaginate = commandes.map(CommandeSimpleResponse::new);
+        var clientSimpleResponse = new ClientSimpleResponse(client);
+        Map<String, Object> response = new HashMap<>();
+        response.put("client", clientSimpleResponse);
+        response.put("commandes", RestResponse.responsePaginate(
+                HttpStatus.OK,
+                commandeClientPaginate.getContent(),
+                commandeClientPaginate.getNumber(),
+                commandeClientPaginate.getTotalPages(),
+                commandeClientPaginate.getTotalElements(),
+                commandeClientPaginate.isFirst(),
+                commandeClientPaginate.isLast(),
+                "commandeClientPaginate"
+        ));
+
+        return new ResponseEntity<>(RestResponse.response(
+                HttpStatus.OK,
+                response,
+                "ClientWithPaginateCommandeResponse"
+        ), HttpStatus.OK);
     }
 }
